feat: Support for AntD + integrates account system + private routes

--- a/imports/ui/shared/styles/antd-overrides.less
+++ b/imports/ui/shared/styles/antd-overrides.less
@@ -1,8 +1,5 @@
 /* -------------------------------------------------------------------------- */
-/*                      Other globals than theme globals                      */
+/*                                 Typography                                 */
 /* -------------------------------------------------------------------------- */
 
-// Example:
-button {
-  background-color: pink;
-}
+@font-family: 'Montserrat', sans-serif;
